--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: download dependencies
-        run: /gradlew dependencies
+        run: ./gradlew dependencies
 
       # Runs a set of commands using the runners shell
       - name: check and build
