--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,3 +38,11 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: check and build
         run: ./gradlew check jar --max-workers=2
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v2
+        with:
+          name: my-artifact
+          path: |
+            buildGradle/reports
+            buildGradle/test-results
+            buildGradle/libs
