--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,10 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: check and build
         run: ./gradlew check jar --max-workers=2
+
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v2
+        if: ${{ always() }}
         with:
           name: my-artifact
           path: |
