--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,4 @@
-rootProject.name=rhino
-group=org.mozilla
+rootProject.name=sai
+group=com.anatawa12.sai
 version=1.7.14-SNAPSHOT
 buildDir=buildGradle
-mavenSnapshotRepo=https://oss.sonatype.org/content/repositories/snapshots
-mavenReleaseRepo=https://oss.sonatype.org/service/local/staging/deploy/maven2/
