fix vcsUrl of attribute of bintray

--- a/build.gradle
+++ b/build.gradle
@@ -248,7 +248,7 @@ bintray {
         name = 'com.anataw12.sai'
         userOrg = user
         licenses = ['MPL-2.0']
-        vcsUrl = 'git@github.com:anatawa12/sai.git'
+        vcsUrl = 'https://github.com/anatawa12/sai.git'
         version {
             name = project.version
             released  = new Date()
