--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ plugins {
     id 'com.github.spotbugs' version "4.6.0"
     id "com.jfrog.bintray" version "1.8.5"
 
-    id "org.jetbrains.kotlin.jvm" version "1.4.20"
+    id "org.jetbrains.kotlin.jvm" version "1.4.30"
+    id "com.anatawa12.auto-visitor" version "1.0.1"
 }
 
 tasks.withType(JavaCompile) {
